fix: prevent horizontal scrolling bug on resize

--- a/assets/src/js/admin/reports/app/style.scss
+++ b/assets/src/js/admin/reports/app/style.scss
@@ -1,3 +1,9 @@
+#reports-app {
+	position: relative;
+	width: 100%;
+	overflow-x: hidden;
+}
+
 .givewp-inline-period-selector {
 	position: absolute;
 	top: 0;
